[pyproject.toml] Fix bug (not executable due to typo)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ maintainers = [
 keywords = [
     'python',
     'FreeSurfer',
-    'Brain MRI,
+    'Brain MRI',
     'Cortical Surface',
 ]
 classifiers = [
