--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['setuptools >= 61.0.0']
 build-backend = 'setuptools.build_meta'
 
 [project]
-name = 'whippersnapper'
+name = 'whippersnappy'
 version = '2.0.0.dev'
 description = 'A package to plot and capture FreeSurfer-style surface overlays.'
 readme = 'README.md'
@@ -62,33 +62,33 @@ test = [
     'pytest-timeout',
 ]
 all = [
-    'whippersnapper[build]',
-    'whippersnapper[doc]',
-    'whippersnapper[style]',
-    'whippersnapper[test]',
+    'whippersnappy[build]',
+    'whippersnappy[doc]',
+    'whippersnappy[style]',
+    'whippersnappy[test]',
 ]
 full = [
-    'whippersnapper[all]',
+    'whippersnappy[all]',
 ]
 
 [project.urls]
-homepage = 'https://github.com/Deep-MI/WhipperSnapper'
-documentation = 'https://github.com/Deep-MI/WhipperSnapper'
-source = 'https://github.com/Deep-MI/WhipperSnapper'
-tracker = 'https://github.com/Deep-MI/WhipperSnapper/issues'
+homepage = 'https://github.com/Deep-MI/WhipperSnapPy'
+documentation = 'https://github.com/Deep-MI/WhipperSnapPy'
+source = 'https://github.com/Deep-MI/WhipperSnapPy'
+tracker = 'https://github.com/Deep-MI/WhipperSnapPy/issues'
 
 [project.scripts]
-whippersnapper = 'whippersnapper.cli:run'
+whippersnap = 'whippersnappy.cli:run'
 
 [tool.setuptools]
 include-package-data = false
 
 [tool.setuptools.packages.find]
-include = ['whippersnapper*']
-exclude = ['whippersnapper*tests']
+include = ['whippersnappy*']
+exclude = ['whippersnappy*tests']
 
 [tool.setuptools.package-data]
-whippersnapper = ['*.ttf']
+whippersnappy = ['*.ttf']
 
 [tool.black]
 line-length = 88
@@ -119,7 +119,7 @@ extend_skip_glob = [
 convention = 'numpy'
 ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
 match = '^(?!setup|__init__|test_).*\.py'
-match-dir = '^whippersnapper.*'
+match-dir = '^whippersnappy.*'
 add_ignore = 'D100,D104,D107'
 
 [tool.pytest.ini_options]
@@ -132,8 +132,8 @@ branch = true
 cover_pylib = false
 omit = [
     '**/__init__.py',
-    '**/whippersnapper/_version.py',
-    '**/whippersnapper/commands/*',
+    '**/whippersnappy/_version.py',
+    '**/whippersnappy/commands/*',
     '**/tests/**',
 ]
 
