--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'whippersnappy'
-version = '2.0.0.dev'
+version = '1.0.0'
 description = 'A package to plot and capture FreeSurfer-style surface overlays.'
 readme = 'README.md'
 license = {file = 'LICENSE'}
