--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,22 @@ build = [
     'build',
     'twine',
 ]
+doc = [
+    'furo',
+    'matplotlib',
+    'memory-profiler',
+    'numpydoc',
+    'sphinx',
+    'sphinxcontrib-bibtex',
+    'sphinx-copybutton',
+    'sphinx-design',
+    'sphinx-gallery',
+    'sphinx-issues',
+    'pypandoc',
+    'nbsphinx',
+    'IPython', # For syntax highlighting in notebooks
+    'ipykernel',
+]
 style = [
     'bibclean',
     'black',
@@ -103,6 +119,7 @@ extend-exclude = '''
     | .github
     | setup.py
     | data/
+    | doc/
     | examples/
 )
 '''
@@ -115,6 +132,7 @@ py_version = 38
 extend_skip_glob = [
     'setup.py',
     'data/*',
+    'doc/*',
     'examples/*',
 ]
 
