--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ doc = [
     'matplotlib',
     'memory-profiler',
     'numpydoc',
-    'sphinx',
+    'sphinx<=7.0.1',
     'sphinxcontrib-bibtex',
     'sphinx-copybutton',
     'sphinx-design',
