exclude read_geometry.py
which is basically slightly fixed nibabel code and should not be reformatted at the moment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,9 +118,8 @@ extend-exclude = '''
       __pycache__
     | .github
     | setup.py
-    | data/
     | doc/
-    | examples/
+    | whippersnappy/read_geometry.py
 )
 '''
 
