--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -43,10 +43,12 @@ jobs:
         run: pytest whippersnappy --cov=whippersnappy --cov-report=xml --cov-config=pyproject.toml
       - name: Upload to codecov
         if: ${{ matrix.os == 'ubuntu' && matrix.python-version == 3.9 }}
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           files: ./coverage.xml
           flags: unittests # optional
           name: codecov-umbrella # optional
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: deep-mi/WhipperSnapPy
