--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -25,6 +25,13 @@ jobs:
         with:
           python-version: 3.9
           #architecture: 'x64'
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt-get update
+          sudo apt-get -y install libgl1 libegl1
+          sudo apt install libxcb-cursor0
       - name: Install package
         run: |
           python -m pip install --progress-bar off --upgrade pip setuptools wheel
