Migrating from PyQt5 to PyQt6:
whippersnappy/config_app.py:
- Changed imports from PyQt5 to PyQt6
- Changed enums to PyQt6 syntax

whippersnappy/cli/whippersnap.py:
- Changed imports from PyQt5 to PyQt6
- Changed enums to PyQt6 syntax

pyproject.toml:
- changed dependencies from PyQt5==5.15.6 to PyQt6

doc.yml:
- added new step in build job to add required linux
dependencies for PyQt6:
 - libxcb-cursor0
 - libgl1
 - libegl1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,9 @@ dependencies = [
     'pillow',
     'pyopengl==3.1.6',
     'nibabel',
-    'PyQt5',
-    'psutil'
+    'PyQt6',
+    'psutil',
+
 ]
 
 [project.optional-dependencies]
