pyproject.toml: - latest pyopengl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ dependencies = [
     'numpy>=1.21',
     'pyrr',
     'pillow',
-    'pyopengl==3.1.6',
+    'pyopengl',
     'nibabel',
     'PyQt6',
     'psutil',
